# metamodule-voxglitch

./: .gitmodules  CMakeLists.txt  README.md  extractPositions.py  plugin-mm.json  process_assets.sh  voxglitch_positions.hpp
assets/arpseq/: arpseq_panel-dark_positions.json
assets/arpseq/readout/: 10_positions.json  13_positions.json  14_positions.json  15_positions.json  1_positions.json  2_positions.json  3_positions.json  6_positions.json  9_positions.json  QuantizeOff_positions.json
assets/autobreak/: autobreak_panel_positions.json
assets/autobreak_studio/: autobreak_studio_panel_positions.json
assets/bytebeat/: bytebeat_panel-dark_positions.json  bytebeat_panel_positions.json
assets/components/: DigitalSwitchOff_positions.json  DigitalSwitchOn_positions.json  groove_box_TrimpotMedium_positions.json  square_light_off_positions.json
assets/conference_call/: conference_call_panel_positions.json
assets/cue_research/: cue_research_panel-dark_positions.json  cue_research_panel_positions.json
assets/digital_sequencer/: digital_sequencer_panel-dark_positions.json
assets/ghosts/: ghosts_panel-dark_positions.json  ghosts_panel_positions.json
assets/grain_engine_mk2_expander/: grain_engine_mk2_expander_panel-dark_positions.json  grain_engine_mk2_expander_panel_positions.json
assets/grain_fx/: panel_positions.json
assets/groovebox/: groove_box_soft_button_lit_positions.json
assets/hazumi/: hazumi_panel-dark_positions.json
assets/looper/: looper_panel-dark_positions.json
assets/onezero/: onezero_panel_positions.json
assets/repeater/: repeater_panel-dark_positions.json
assets/sampler16p/: sampler16p_panel-dark_positions.json  sampler16p_panel_positions.json
assets/vector_rotation/: vector_rotation_panel-dark_positions.json  vector_rotation_panel_positions.json
assets/vector_translation/: vector_translation_panel-dark_positions.json  vector_translation_panel_positions.json
assets/wavbank/: wavbank_panel-dark_positions.json  wavbank_panel_positions.json
assets/wavbank_mc/: wavbank_mc_panel_positions.json
assets/xy/: xy_panel_positions.json
metamodule-plugins/: Voxglitch.mmplugin
metamodule-plugins/VoxGlitch/: plugin-mm.json
metamodule-plugins/VoxGlitch/arpseq/: arpseq_panel_positions.json
metamodule-plugins/VoxGlitch/components/: redsquare_positions.json  (+6 more)
(+40 files in other folders)
